--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.3", features = [] }
 [dependencies]
 regex = "1"
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.7.0", features = [ "window-start-dragging", "window-close", "window-unminimize", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "macos-private-api"] }
 
