--- a/.github/workflows/buildBeta.yml
+++ b/.github/workflows/buildBeta.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install -g @tauri-apps/cli
 
     - name: Build Tauri app for Windows
-      run: npm run tauri build
+      run: npm tauri build
 
     - name: Create Release
       id: create_release
