--- a/.github/workflows/buildBeta.yml
+++ b/.github/workflows/buildBeta.yml
@@ -28,22 +28,10 @@ jobs:
       run: pnpm tauri build
 
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses : ncipollo/release-action@v1
       with:
-        tag_name: v1.0.0
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src-tauri/target/release/bundle/msi/*.msi
-        asset_name: my-tauri-app.msi
-        asset_content_type: application/x-msi
+        artifacts: './src-tauri/**/*.exe, ./src-tauri/**/*.msi'
+        token: ${{ secrets.GITHUB_TOKEN }}
+        release_name: 'Beta Release'
+        tag: 'beta'
+        release_notes: 'This is a beta release'
