--- a/.github/workflows/buildBeta.yml
+++ b/.github/workflows/buildBeta.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Create Release
       uses : ncipollo/release-action@v1
       with:
-        artifacts: './src-tauri/**/*.exe, ./src-tauri/**/*.msi'
+        artifacts: '.\\src-tauri\\target\\release\\**\\*.exe, .\\src-tauri\\target\\release\\**\\*.msi'
         token: ${{ secrets.GITHUB_TOKEN }}
         name: 'Beta Release'
         tag: 'beta'
