--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "tauri-designed-template",
-    "version": "0.1.0",
+    "name": "multitool",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@lottiefiles/dotlottie-react": "^0.9.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.1",
