--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "multitool"
+version = "1.0.0"
+description = "StarCitizen tool box"
+authors = ["Onivoid"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "multitool"
 edition = "2021"
 rust-version = "1.60"
 
@@ -17,9 +17,11 @@ tauri-build = { version = "1.5.3", features = [] }
 [dependencies]
 regex = "1"
 serde_json = "1.0"
+chrono = "0.4"
+tokio = { version = "1.40.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.0", features = [ "window-start-dragging", "window-close", "window-unminimize", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "macos-private-api"] }
+tauri = { version = "1.7.0", features = [ "shell-open", "window-start-dragging", "window-close", "window-unminimize", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "macos-private-api"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
